--- a/SenzuraPOS-DAPP/BillingWindow.xaml
+++ b/SenzuraPOS-DAPP/BillingWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Billing - BYTEBUY POS" Height="550" Width="900"
+        Title="Billing - BYTEBUY POS" Height="600" Width="900"
         WindowStartupLocation="CenterScreen"
         Background="{DynamicResource MaterialDesignPaper}">
 
@@ -12,39 +12,42 @@
             <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
 
-        <!-- 🧮 Product Selection Panel -->
+        <!-- Product Selection -->
         <StackPanel Grid.Column="0" Margin="10">
             <TextBlock Text="Add Product" FontSize="20" FontWeight="Bold" Margin="0 0 0 20"/>
 
             <ComboBox x:Name="ProductComboBox"
                       Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                      Width="200"
+                      Width="280"
                       Margin="0 0 0 10"
-                      materialDesign:HintAssist.Hint="Select Product"/>
+                      materialDesign:HintAssist.Hint="Select Product"
+                      DisplayMemberPath="DisplayName"/>
 
             <TextBox x:Name="QuantityTextBox"
                      Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                     Width="200"
+                     Width="280"
                      Margin="0 0 0 10"
                      materialDesign:HintAssist.Hint="Quantity"/>
 
             <Button Content="Add to Cart"
                     Style="{StaticResource MaterialDesignOutlinedButton}"
-                    Width="200"
+                    Width="280"
                     Height="40"
                     Background="#1F1C2C"
                     Foreground="White"
                     Click="AddToCart_Click"/>
         </StackPanel>
 
-        <!-- 🛒 Cart Display -->
+        <!-- Cart Display -->
         <StackPanel Grid.Column="1" Margin="20 0 0 0">
             <TextBlock Text="Current Cart" FontSize="20" FontWeight="Bold" Margin="0 0 0 20"/>
 
-            <ListView x:Name="CartListView" Height="300">
+            <ListView x:Name="CartListView" Height="350">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Product" DisplayMemberBinding="{Binding Name}" Width="120"/>
+                        <GridViewColumn Header="Product" DisplayMemberBinding="{Binding Name}" Width="150"/>
+                        <GridViewColumn Header="Brand" DisplayMemberBinding="{Binding Brand}" Width="100"/>
+                        <GridViewColumn Header="Model" DisplayMemberBinding="{Binding ModelNumber}" Width="100"/>
                         <GridViewColumn Header="Qty" DisplayMemberBinding="{Binding Quantity}" Width="50"/>
                         <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}" Width="80"/>
                         <GridViewColumn Header="Total" DisplayMemberBinding="{Binding Total}" Width="80"/>
