--- a/SenzuraPOS-DAPP/BillingWindow.xaml
+++ b/SenzuraPOS-DAPP/BillingWindow.xaml
@@ -2,9 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Billing - BYTEBUY POS" Height="600" Width="900"
+        Title="Billing - BYTEBUY POS" Height="650" Width="1000"
         WindowStartupLocation="CenterScreen"
-        Background="{DynamicResource MaterialDesignPaper}">
+        Background="{DynamicResource MaterialDesignPaper}"
+        Icon="Assets/ico.ico">
 
     <Grid Margin="20">
         <Grid.ColumnDefinitions>
@@ -13,61 +14,70 @@
         </Grid.ColumnDefinitions>
 
         <!-- Product Selection -->
-        <StackPanel Grid.Column="0" Margin="10">
-            <TextBlock Text="Add Product" FontSize="20" FontWeight="Bold" Margin="0 0 0 20"/>
+        <materialDesign:Card Grid.Column="0" Margin="10" Padding="20">
+            <StackPanel>
+                <TextBlock Text="Add Product" FontSize="24" FontWeight="Bold" Margin="0 0 0 20"
+                           Foreground="{DynamicResource PrimaryHueMidBrush}"/>
 
-            <ComboBox x:Name="ProductComboBox"
-                      Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                      Width="280"
-                      Margin="0 0 0 10"
-                      materialDesign:HintAssist.Hint="Select Product"
-                      DisplayMemberPath="DisplayName"/>
+                <ComboBox x:Name="ProductComboBox"
+                          Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                          Width="280"
+                          Margin="0 0 0 15"
+                          materialDesign:HintAssist.Hint="Select Product"
+                          DisplayMemberPath="DisplayName"/>
 
-            <TextBox x:Name="QuantityTextBox"
-                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                     Width="280"
-                     Margin="0 0 0 10"
-                     materialDesign:HintAssist.Hint="Quantity"/>
+                <TextBox x:Name="QuantityTextBox"
+                         materialDesign:HintAssist.Hint="Quantity"
+                         Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                         Width="280"
+                         Margin="0 0 0 20"/>
 
-            <Button Content="Add to Cart"
-                    Style="{StaticResource MaterialDesignOutlinedButton}"
-                    Width="280"
-                    Height="40"
-                    Background="#1F1C2C"
-                    Foreground="White"
-                    Click="AddToCart_Click"/>
-        </StackPanel>
+                <Button Content="Add to Cart"
+                        Style="{StaticResource MaterialDesignRaisedButton}"
+                        Width="280"
+                        Height="45"
+                        Background="{DynamicResource PrimaryHueMidBrush}"
+                        Foreground="{DynamicResource PrimaryHueMidForegroundBrush}"
+                        Click="AddToCart_Click"/>
+            </StackPanel>
+        </materialDesign:Card>
 
         <!-- Cart Display -->
-        <StackPanel Grid.Column="1" Margin="20 0 0 0">
-            <TextBlock Text="Current Cart" FontSize="20" FontWeight="Bold" Margin="0 0 0 20"/>
+        <materialDesign:Card Grid.Column="1" Margin="20 0 0 0" Padding="20">
+            <StackPanel>
+                <TextBlock Text="Current Cart" FontSize="24" FontWeight="Bold" Margin="0 0 0 20"
+                           Foreground="{DynamicResource PrimaryHueMidBrush}"/>
 
-            <ListView x:Name="CartListView" Height="350">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Product" DisplayMemberBinding="{Binding Name}" Width="150"/>
-                        <GridViewColumn Header="Brand" DisplayMemberBinding="{Binding Brand}" Width="100"/>
-                        <GridViewColumn Header="Model" DisplayMemberBinding="{Binding ModelNumber}" Width="100"/>
-                        <GridViewColumn Header="Qty" DisplayMemberBinding="{Binding Quantity}" Width="50"/>
-                        <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}" Width="80"/>
-                        <GridViewColumn Header="Total" DisplayMemberBinding="{Binding Total}" Width="80"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
+                <ListView x:Name="CartListView" Height="380"
+                          Style="{StaticResource MaterialDesignListView}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Product" DisplayMemberBinding="{Binding Name}" Width="150"/>
+                            <GridViewColumn Header="Brand" DisplayMemberBinding="{Binding Brand}" Width="100"/>
+                            <GridViewColumn Header="Model" DisplayMemberBinding="{Binding ModelNumber}" Width="100"/>
+                            <GridViewColumn Header="Qty" DisplayMemberBinding="{Binding Quantity}" Width="50"/>
+                            <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price, StringFormat='C'}" Width="80"/>
+                            <GridViewColumn Header="Total" DisplayMemberBinding="{Binding Total, StringFormat='C'}" Width="80"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 20 0 0">
-                <TextBlock Text="Total: " FontSize="16" FontWeight="Bold" Margin="0 0 10 0"/>
-                <TextBlock x:Name="TotalAmountTextBlock" Text="Rs. 0.00" FontSize="16" FontWeight="Bold"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 20 0 0">
+                    <TextBlock Text="Total: " FontSize="20" FontWeight="Bold" Margin="0 0 10 0"
+                               Foreground="{DynamicResource PrimaryHueMidBrush}"/>
+                    <TextBlock x:Name="TotalAmountTextBlock" Text="Rs. 0.00" FontSize="20" FontWeight="Bold"
+                               Foreground="{DynamicResource PrimaryHueMidBrush}"/>
+                </StackPanel>
+
+                <Button Content="Checkout"
+                        Style="{StaticResource MaterialDesignRaisedButton}"
+                        Width="180" Height="45"
+                        HorizontalAlignment="Right"
+                        Background="{DynamicResource SecondaryAccentBrush}"
+                        Foreground="{DynamicResource SecondaryAccentForegroundBrush}"
+                        Margin="0 15 0 0"
+                        Click="Checkout_Click"/>
             </StackPanel>
-
-            <Button Content="Checkout"
-                    Style="{StaticResource MaterialDesignRaisedButton}"
-                    Width="150" Height="40"
-                    HorizontalAlignment="Right"
-                    Background="Green"
-                    Foreground="White"
-                    Margin="0 10 0 0"
-                    Click="Checkout_Click"/>
-        </StackPanel>
+        </materialDesign:Card>
     </Grid>
 </Window>
